Fix alignment of contextual toolbars on blocks directly under PB block.

--- a/css/admin.less
+++ b/css/admin.less
@@ -313,6 +313,7 @@
 				.clearfix();
 				margin: 0 -5px;
 				position: relative;
+				display: flex;
 
 				.ui-resizable-handle.ui-resizable-w{
 					width: 10px;
@@ -333,7 +334,6 @@
 				.cell {
 
 					.box-sizing(border-box);
-					float: left;
 					position: relative;
 					padding: 0 5px;
 
@@ -1865,7 +1865,7 @@
 		.siteorigin-panels-builder {
 			.so-builder-toolbar {
 				border: 1px solid #dedede;
-				z-index: 20;
+				z-index: 1;
 			}
 
 			.so-rows-container {
